change html file

--- a/deepsea.html
+++ b/deepsea.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Deep Sea Exploration</h1>
+<h2>Hello!!</Hh2>
         <nav>
         <ul>
             <li><a href="#about">About</a></li>
